# inspro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.bat
lib/RelWithDebInfo/: InsproGLM.lib  InsproUtil.lib
src/inspro/: camera.hpp  dielectric.hpp  hittable.hpp  hittable_list.hpp  lambertian.hpp  main.cpp  material.hpp  metal.hpp  ray.hpp  sphere.hpp  vec3.hpp
src/inspro/material/: dielectric.hpp  lambertian.hpp  material.hpp  metal.hpp
src/inspro/object/: camera.hpp  sphere.hpp
src/inspro/raytracing/: aabb.cpp  aabb.hpp  bvh_node.cpp  bvh_node.hpp  hittable.hpp  hittable_list.hpp  ray.hpp
src/util/: defines.hpp  functions.hpp  random.hpp
src/util/math/: generic.hpp  geometric.hpp  glm_ext.hpp
